@@ -1,3 +1,4 @@
 lintian-tags
 lintian-brush-tags
 dist/
+lintian_brush.egg-info
