@@ -1,0 +1,1 @@
+Remove empty debian/patches/series.
